# anf-siren-identification

./: .gitignore  README.md  pyproject.toml
anfsd/anf/: kalmanf.py
anfsd/classification/: dataset.py  evaluation.py  inference.py  training.py
anfsd/classification/models/: anfnet.py  vggsiren.py
anfsd/configs/: ANFNet_base.yaml  VGGSiren_base.yaml
anfsd/configs/env/: local.yaml
anfsd/configs/model/: ANFNet.yaml  VGGSiren.yaml
